dropshot/tests/fail/bad_endpoint3.stderr
error[E0277]: the trait bound `String: Extractor` is not satisfied
  --> $DIR/bad_endpoint3.rs:15:12
   |
9  | / #[endpoint {
10 | |     method = GET,
11 | |     path = "/test",
12 | | }]
   | |__- required by this bound in `need_extractor`
...
15 |       param: String,
   |              ^^^^^^
   |              |
   |              the trait `Extractor` is not implemented for `String`
   |              required by a bound in this

error[E0277]: the trait bound `fn(Arc<RequestContext>, String) -> impl Future {<impl From<bad_endpoint> for ApiEndpoint>::from::bad_endpoint}: dropshot::handler::HttpHandlerFunc<_, _>` is not satisfied
  --> $DIR/bad_endpoint3.rs:13:10
   |
13 | async fn bad_endpoint(
   |          ^^^^^^^^^^^^ the trait `dropshot::handler::HttpHandlerFunc<_, _>` is not implemented for `fn(Arc<RequestContext>, String) -> impl Future {<impl From<bad_endpoint> for ApiEndpoint>::from::bad_endpoint}`
   |
  ::: $WORKSPACE/dropshot/src/api_description.rs
   |
   |         HandlerType: HttpHandlerFunc<FuncParams, ResponseType>,
   |                      ----------------------------------------- required by this bound in `ApiEndpoint::new`
